Fixed text overlap on the social media heading

--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ h2 {
 }
 
 div {
-	line-height: 0.65em;
+	line-height: 1.3em;
 }
 
 summary {
